--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -41,6 +41,17 @@
 }
 
 @media all and (max-width:991px) {
+	.contact-info-icon i {
+		font-size: 22px;
+		line-height: 55px;
+	}
+	.contact-info-icon {
+		height: 55px;
+		min-width: 55px;
+	}
+	.contact-form{
+		margin-top: 60px;
+	}
 	h2 {
 		font-size: 35px;
 		line-height: 50px;
@@ -140,7 +151,7 @@
 		padding: 80px 0;
 	}
 	.common-heading-area h3 {
-		font-size: 28px;
+		font-size:40px;
 		line-height:40px;
 	}
 	.evaluation-text-box {
