--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -287,3 +287,9 @@
 		margin-right: 0;
 	}
 }
+@media all and (max-width:480px) {
+	.country-menu.dropdown-menu[data-bs-popper] {
+		left: -220px;
+		 
+	}
+}
