audcad page add

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -166,3 +166,15 @@ margin-right: 22px;
 .mt-20{
 	margin-top: 20px;
 }
+.color-35{
+	color:#359846;
+}
+.color-e8{
+	color:#E80000;
+}
+.g-30{
+	gap: 30px;
+}
+.g-20{
+	gap: 20px;
+}
