--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -149,10 +149,7 @@
 	.ptb120 {
 		padding: 80px 0;
 	}
-	.common-heading-area h3 {
-		font-size:40px;
-		line-height:40px;
-	}
+	 
 	.evaluation-text-box {
 		text-align: center;
 		margin-left: 0;
@@ -425,6 +422,10 @@
 		line-height: 26px;
 		margin: 25px 0;
 	}
+	.mt-100{
+		margin-top: 80px;
+	}
+
 }
 @media all and (max-width:575px) {
 	.footer-widgets-area {
