--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -717,6 +717,7 @@ button.tablinks.active .tab-svg {
 		border-radius: 10px;
 		padding: 10px;
 		background: #FFF;
+		height: 100%;
 		padding-right: 30px;
 		box-shadow: 0px 16.904px 25.356px 0px rgba(196, 205, 218, 0.25);
 	}
@@ -1077,7 +1078,7 @@ button.tablinks.active .tab-svg {
 /* End footer css */
 /* Start leverage page css */
 .common-page-heading-section {
-	padding-top: 110px !important;
+	padding-top: 130px !important;
 	padding-bottom:120px;
 	background-position: center center !important;
 	background-size: cover !important;
